Final Code.cydsn/BUILD.log
--------------- Build Started: 10/13/2017 20:32:15 Project: Final Code, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Daanish Bootcamp\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Daanish Bootcamp\Documents\PSoC Creator\PSoC Design\ECE3091\Final Code.cydsn\Final Code.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Daanish Bootcamp\Documents\PSoC Creator\PSoC Design\ECE3091\Final Code.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0029: information: Voltage Reference Information: Vref '1.024V' is connected to terminal 'vminus' of '\ADC:DSM\' but no direct hardware connection exists.
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.1\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_DelSig_v3_20\PSoC5\ADC_DelSig_v3_20.cysch (Instance:DSM)
 * C:\Users\Daanish Bootcamp\Documents\PSoC Creator\PSoC Design\ECE3091\Final Code.cydsn\TopDesign\TopDesign.cysch (Instance:vRef_2)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 38% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 57% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 79% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Info: apr.M0060: Comparator 'Comparator[2]@[FFB(Comparator,2)]' is powered up by analog subsystem to support an auto-enabled vref. (App=cydsfit)
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c:58:7: error: expected declaration specifiers or '...' before '(' token
 srand((unsigned) time(&t)); // Initialize random number generator
       ^
main.c: In function 'TimerF1_ISR_Handler':
main.c:63:3: warning: implicit declaration of function 'Timer_ULTRASONIC_F1_ReadStatusRegister' [-Wimplicit-function-declaration]
   Timer_ULTRASONIC_F1_ReadStatusRegister();
   ^
main.c:64:25: warning: implicit declaration of function 'Timer_ULTRASONIC_F1_ReadCounter' [-Wimplicit-function-declaration]
    uint16  TimerCount = Timer_ULTRASONIC_F1_ReadCounter();
                         ^
main.c: In function 'TimerF2_ISR_Handler':
main.c:69:3: warning: implicit declaration of function 'Timer_ULTRASONIC_F2_ReadStatusRegister' [-Wimplicit-function-declaration]
   Timer_ULTRASONIC_F2_ReadStatusRegister();
   ^
main.c:70:24: warning: implicit declaration of function 'Timer_ULTRASONIC_F2_ReadCounter' [-Wimplicit-function-declaration]
   uint16  TimerCount = Timer_ULTRASONIC_F2_ReadCounter();
                        ^
main.c: In function 'pattern':
main.c:87:9: warning: variable 'ayus' set but not used [-Wunused-but-set-variable]
     int ayus[5];
         ^
main.c: In function 'main':
main.c:129:10: warning: unused variable 'skrrt' [-Wunused-variable]
     char skrrt[30];
          ^
main.c: In function 'Read_Order':
main.c:310:12: warning: function returns address of local variable [-Wreturn-local-addr]
     return pattern;
            ^
main.c: In function 'Line_Up_Puck':
main.c:330:9: warning: unused variable 'wall_right' [-Wunused-variable]
     int wall_right = 0;
         ^
main.c:328:9: warning: unused variable 'correct_puck' [-Wunused-variable]
     int correct_puck = 0;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 10/13/2017 20:32:47 ---------------
